deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webzoom
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
    haproxy.router.openshift.io/timeout-tunnel: 3600s
spec:
  host: webzoom.apps.example.intranet
  to: {kind: Service, name: webzoom}
  port: {targetPort: http}
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
